# pico-db

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: index_benchmark.py
src/picodb/: __init__.py  __main__.py  ast_nodes.py  cli.py  database.py  errors.py  executor.py  index.py  lexer.py  parser.py  storage.py
tests/: test_executor.py  test_lexer.py  test_parser.py  test_storage_and_index.py
