[project]
name = "pico-db"
version = "0.1.0"
description = "A tiny relational database with its own SQL engine, written from scratch in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matheus" }]
keywords = ["database", "sql", "parser", "interpreter", "storage-engine"]
dependencies = []

[project.scripts]
pico-db = "picodb.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/picodb"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "W", "I", "UP", "B"]
